Time: 1 ms (86.72%), Space: 44.3 MB (39.39%) - LeetHub