@@ -1,24 +1,18 @@
 class Solution {
-    public void x(int[] arr, int i, List<Integer> curr, List<List<Integer>> ans ){
-        if(arr.length==i){
+    public void solve(List<List<Integer>> ans, int i, List<Integer> curr, int[] arr){
+        if(i==arr.length){
             ans.add(new ArrayList<>(curr));
             return;
         }
         curr.add(arr[i]);
-        x(arr, i+1, curr, ans);
-        curr.remove(curr.size()-1);
-        x(arr, i+1, curr, ans);
-
+        solve(ans, i+1, curr, arr);
+        curr.removeLast();
+        solve(ans, i+1, curr, arr);
     }
-
     public List<List<Integer>> subsets(int[] nums) {
         List<List<Integer>> ans = new ArrayList<>();
         List<Integer> curr = new ArrayList<>();
-
-        x(nums, 0, curr, ans);
+        solve(ans, 0, curr, nums);
         return ans;
-
-        
-        
     }
 }
